# star-sailor

./: .gitignore  README.md  pyproject.toml
star_sailor/: __main__.py  _version.py  constants.py
star_sailor/dyn_2d/: gravity.py  srp.py
star_sailor/ephemeris_2d/: solar.py
star_sailor/scripts/: basic_solar_sail_mission.py
star_sailor/simulator/: __init__.py  odes.py  propagate.py  spacecraft.py
star_sailor/vis/: __init__.py  plotter.py
