[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "star_sailor"
description = "Solar sail simulator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["numpy>=1.24", "scipy==1.8.0"]

[project.urls]
homepage = "https://github.com/itchono/star-sailor"

[project.scripts]
star-sailor = "star_sailor.__main__:main"

[tool.setuptools_scm]
write_to = "star_sailor/_version.py"
